src/test/deca/context/invalid/classes/class_cycle_indirect_3.deca
// Description :
//    Cycle d'héritage indirect entre trois classes.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A extends B {
}

class B extends C {
}

class C extends A {
}

{
}

